--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "dicom2nifti",
     "scipy",
     "batchgenerators>=0.25.1",
-    "numpy>=1.24",
+    "numpy>=1.24,<2",
     "scikit-learn",
     "scikit-image>=0.19.3",
     "SimpleITK>=2.2.1",
